--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
        , {docsh,         "0.7.2"}
        , {elvis_core,    "1.1.1"}
        , {rebar3_format, "0.8.2"}
+       , {erlfmt, {git, "https://github.com/WhatsApp/erlfmt.git", master}}
        , {ephemeral,     "2.0.4"}
        , {tdiff,         "0.1.2"}
        , {uuid,          "2.0.1", {pkg, uuid_erl}}
